--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  name: MyString
+  points: 1
+  assists: 1
+  blocks: 1
+
+two:
+  name: MyString
+  points: 1
+  assists: 1
+  blocks: 1
